# SimpleMedia

./: .gitignore  AppleDialog.h  AppleDialog.mm  Button.qml  CMakeLists.txt  PlayerMenu.qml  README.md  main.cpp  main.qml  main.qrc  slider.qml
